--- a/package.json
+++ b/package.json
@@ -104,6 +104,9 @@
 	"devDependencies": {
 		"vscode": "0.10.x"
 	},
+	"dependencies": {
+		"gitHubIssue":"0.0.1"
+	},
 	"repository": {
 		"type":"git",
 		"url":"https://github.com/HookyQR/VSCodeGitHubIssues"
