--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "GitHubIssues",
 	"displayName": "GitHub Issues",
 	"description": "Track Issues in GitHub linked workspaces",
-	"version": "0.0.6",
+	"version": "0.0.7",
 	"publisher": "HookyQR",
 	"engines": {
 		"vscode": "^0.10.5"
@@ -102,10 +102,10 @@
 		}
 	},
 	"devDependencies": {
-		"vscode": "0.10.x"
+		"vscode": "^0.11.x"
 	},
 	"dependencies": {
-		"gitHubIssue":"0.0.1"
+		"gitHubIssue":"0.0.2"
 	},
 	"repository": {
 		"type":"git",
